[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=5]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -201.0
margin_right = -2.0
margin_bottom = -42.0
custom_colors/font_color = Color( 0.909804, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 1 )
text = "Hello,
Earther!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -334.0
margin_right = 80.0
margin_bottom = -234.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="AboutButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -210.0
margin_right = 103.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Exit"

[node name="HighScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 240.0
margin_top = 632.0
margin_right = -1.0
margin_bottom = 710.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="HighScoreLabel2" type="Label" parent="."]
anchor_right = 1.0
margin_left = 90.0
margin_top = 628.0
margin_right = -151.0
margin_bottom = 706.0
custom_fonts/font = SubResource( 1 )
text = "Best:"
align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
